// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export json - nest 1`] = `
{
  "a": {
    "hello": "hello",
    "submit": "Submit Button",
    "world": "world",
  },
  "b": {
    "hello": "hello",
    "world": "world",
  },
}
`;

exports[`export json - nest 2`] = `
{
  "a": {
    "hello": "",
    "submit": "",
    "world": "",
  },
  "b": {
    "hello": "",
    "world": "",
  },
}
`;

exports[`export json 1`] = `
{
  "a.hello": "hello",
  "a.submit": "Submit Button",
  "a.world": "world",
  "b.hello": "hello",
  "b.world": "world",
}
`;

exports[`export json 2`] = `
{
  "a.hello": "",
  "a.submit": "",
  "a.world": "",
  "b.hello": "",
  "b.world": "",
}
`;

exports[`export json with removed messages 1`] = `
{
  "a.hello": "hello",
  "a.submit": "Submit Button",
  "a.world": "world",
  "b.hello": "hello",
  "b.world": "world",
}
`;

exports[`export json with removed messages 2`] = `
{
  "a.hello": "",
  "a.submit": "",
  "a.world": "",
  "b.hello": "",
  "b.world": "",
}
`;

exports[`export json with removed messages 3`] = `
{
  "a.hello": "hello",
  "b.hello": "hello",
  "b.world": "world",
}
`;

exports[`export json with removed messages 4`] = `
{
  "a.hello": "",
  "b.hello": "",
  "b.world": "",
}
`;

exports[`export using custom module 1`] = `
{
  "a.custom.hello": "hello",
  "a.custom.world": "world",
  "b.custom.message": "Message",
}
`;

exports[`export using custom module 2`] = `
{
  "a.custom.hello": "",
  "a.custom.world": "",
  "b.custom.message": "",
}
`;

exports[`sort keys 1`] = `
[
  "a.hello",
  "a.world",
  "b.hello",
  "b.world",
  "c.hello",
  "y.hello",
  "z.hello",
]
`;

exports[`sort keys 2`] = `
[
  "a.hello",
  "a.world",
  "b.hello",
  "b.world",
  "c.hello",
  "y.hello",
  "z.hello",
]
`;

exports[`with overwriteDefault 1`] = `
{
  "a.custom.hello": "hello",
  "a.custom.world": "world",
  "b.custom.message": "Default Message",
}
`;

exports[`with overwriteDefault 2`] = `
{
  "a.custom.hello": "",
  "a.custom.world": "",
  "b.custom.message": "",
}
`;
